--- a/css/main.css
+++ b/css/main.css
@@ -419,6 +419,13 @@ body {
 	border-top: 1px solid rgba(0,0,0,0.08);
 	padding-top: 20px;
 	color: #8F8F8F;
+	font-size: calc(var(--index)/1.6);
+}
+
+.cookie__privacy_link{
+	color: #8F8F8F;
+	font-weight: 500;
+	text-decoration: underline;
 }
 
 /* Services STYLES */
@@ -883,7 +890,7 @@ body {
 .desc{
 	width: 80%;
 	margin-bottom:  calc(var(--index)*1.5);
-	font-weight: 500;
+	font-weight: 400;
 }
 
 .contact-address{
