--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@ body {
 
 .hero{
 	position: relative;
-	background: url(/images/banner/hero.jpg) no-repeat center;
+	background: url(/images/banner/hero.webp) no-repeat center;
 	height: 100vh;
 	background-size: cover;
 	margin-bottom: calc(var(--index) * 2.5)
